<resources>
    <string name="app_name">CoinWatch</string>
    <string name="current_btc_exchange_rate">Current BTC Exchange Rate:</string>
    <string name="usd_sign">$</string>
    <string name="usd">USD</string>
    <string name="place_holder_amount">0.00</string>
    <string name="all_time">All Time</string>
    <string name="last_month">Last Month</string>
    <string name="last_day">Last Day</string>
    <string name="placeholder_date_start">01 Jan 2018</string>
    <string name="placeholder_date_end">31 Jan 2018</string>
    <string name="label_date_end">End</string>
    <string name="label_date_start">Start</string>
    <string name="error_from_server">There was an error connecting to the server, please check
        your network connection and try again later.</string>
    <string name="selected_date">Selected Date:</string>
    <string name="selected_value">Selected Value:</string>
</resources>
