<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.idleoffice.syncer.ui.main.MainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.idleoffice.coinwatch.ui.main.MainViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/currentPriceLayout"
            android:layout_width="match_parent"
            android:layouut_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layoutt_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/graphLayout"
            app:layo_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/priceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/current_btc_exchange_rate"
                android:textSize="@dimen/price_label_size"
                app:layout_constraintBottom_toTopOf="@id/priceTextHolder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/priceTextHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priceLabel">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd_sign"
                    android:textSize="@dimen/price_font_size" />

                <TextView
                    android:id="@+id/priceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:text="@string/place_holder_amount"
                    android:textSize="@dimen/price_font_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/usd"
                    android:textSize="@dimen/price_font_size" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/graphLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentPriceLayout">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/seekBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.github.mikephil.charting.charts.LineChart>

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:max="100"
                android:progress="0"
                app:layout_constraintBottom_toTopOf="@id/dateBtnBar"
                app:layout_constraintEnd_toEndOf="@+id/chart"
                app:layout_constraintStart_toStartOf="@+id/chart"
                app:layout_constraintTop_toBottomOf="@id/chart" />

            <android.support.v7.widget.ButtonBarLayout
                android:id="@+id/dateBtnBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:divider="?android:attr/dividerHorizontal"
                android:orientation="horizontal"
                android:showDividers="middle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seekBar">

                <Button
                    android:id="@+id/btnPickAll"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onBtnClickAllTime()}"
                    android:text="@string/all_time" />

                <Button
                    android:id="@+id/btnPickMonth"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onBtnClickMonth()}"
                    android:text="@string/last_month" />

                <Button
                    android:id="@+id/btnPickDay"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onBtnClickDay()}"
                    android:text="@string/last_day" />
            </android.support.v7.widget.ButtonBarLayout>
            <!--<LinearLayout-->
            <!--android:id="@+id/dateTextDisplays"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@id/dateBtnBar"-->
            <!--android:baselineAligned="false">-->
            <!--<LinearLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="vertical"-->
            <!--&gt;-->

            <!--<TextView-->
            <!--android:textAlignment="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/label_date_start"/>-->
            <!--<TextView-->
            <!--android:textAlignment="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/placeholder_date_start"/>-->
            <!--</LinearLayout>-->
            <!--<LinearLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="vertical"-->
            <!--&gt;-->
            <!--<TextView-->
            <!--android:textAlignment="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/label_date_end"/>-->
            <!--<TextView-->
            <!--android:textAlignment="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/placeholder_date_end"/>-->
            <!--</LinearLayout>-->
            <!--</LinearLayout>-->

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</layout>